force-app/main/default/objects/Starter_Grid_Column__mdt/Starter_Grid_Column__mdt.object-meta.xml
<CustomObject>
    <label>Starter Grid Column</label>
    <pluralLabel>Starter Grid Columns</pluralLabel>
</CustomObject>