force-app/main/default/objects/Starter_Grid_Column__mdt/fields/Column_Label__c.field-meta.xml
<CustomField>
    <fullName>Column_Label__c</fullName>
    <label>Column Label</label>
    <type>Text</type>
    <length>80</length>
</CustomField>