force-app/main/default/objects/Starter_Grid_Column__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>