force-app/main/default/objects/Starter_Grid_Column__mdt/fields/Is_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Is_Searchable__c</fullName>
    <label>Is Searchable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>