force-app/main/default/objects/Starter_Grid_Column__mdt/fields/Is_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Is_Sortable__c</fullName>
    <label>Is Sortable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>